syntax = "proto3";

option csharp_namespace = "ProductManagement.WebAPI.Protos";

package products;

service ProductService {
  rpc GetAllProducts (GetAllProductsRequest) returns (ProductListResponse);
  rpc GetProductById (GetProductByIdRequest) returns (ProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  int32 category_id = 6;
}

message GetAllProductsRequest {}

message ProductListResponse {
  repeated Product products = 1;
}

message GetProductByIdRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  int32 category_id = 5;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  int32 category_id = 6;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ProductResponse {
  Product product = 1;
}
